# yapcc

./: .gitignore  README.md  mypy.ini  pcc  pyproject.toml  ruff.toml
src/yapcc/: cli.py  codegen.py  lex.py  parse.py  tac.py
tests/: __init__.py  test_codegen.py  test_lex.py  test_parse.py
tests/input/invalid_lex/: at_sign.c  backtick.c  invalid_identifier.c  invalid_identifier_2.c
tests/input/invalid_parse/: end_before_expr.c  extra_junk.c  invalid_function_name.c  keyword_wrong_case.c  missing_type.c  misspelled_keyword.c  no_semicolon.c  not_expression.c  space_in_keyword.c  switched_parens.c  unclosed_brace.c  unclosed_paren.c
tests/input/valid/: complement.c  multi_digit.c  negate.c  nested_exp.c  newlines.c  no_newlines.c  return_0.c  return_2.c  spaces.c  tabs.c
